# DataProphet

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  OPTIMIZATIONS.md  README.md  aile++.py  pyproject.toml
DataProphet/: 101ftr.py  101srch.py  109ftree.py  109searcher.py  A+sulale.py  Extended.py  aile++.py  aile.py  aile_compact.py  cocuk.py  config.ini  data.py  fantazi.py  ftr.py  ftree+.py  ftree.py  ftree_gui.py  fullaile.py  main.py  maybe_wrong_soy.py  old_ftree_gui.py  olddata.py  requirements.txt  searcher.py  searcher_gui.py  sorgu.py  soy.py  srch.py  sulale.py
DataProphet/core/: config.py  database.py  gui.py  models.py  services.py  utils.py
src/: config.ini.example  config.py  database.py  family.py  gui.py  main.py  models.py  old101.py  search.py  services.py  utils.py
tests/: conftest.py  test_config.py  test_database.py  test_models.py  test_services.py  test_utils.py
