[project]
name = "dataprophet"
version = "0.1.0"
description = "Data searching and family tree management"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "mysql-connector-python>=9.7.0",
]

[project.scripts]
main = "src.main:main"
old101 = "src.old101:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py314"
line-length = 120

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "UP",    # pyupgrade
    "B",     # bugbear
    "SIM",   # simplify
    "C4",    # flake8-comprehensions
    "RUF",   # ruff-specific
    "PLC",   # pylint convention
    "PLE",   # pylint error
    "PLW",   # pylint warning
]
ignore = [
    "E501",   # line too long (handled by line-length)
    "B008",   # function call in default argument
    "UP007",  # use X | Y for union types
    "RUF001", # ambiguous unicode chars (Turkish ı/İ)
    "RUF002", # ambiguous unicode chars in docstrings
    "RUF003", # ambiguous unicode in comments
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[dependency-groups]
dev = [
    "detect-secrets>=1.5.0",
    "mypy>=2.1.0",
    "pip-audit>=2.10.1",
    "pre-commit>=4.6.0",
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.18",
]
