[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dataprophet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "mysql-connector-python>=9.7.0",
]

[project.scripts]
data = "src.main:main"
old101 = "src.old101:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "ruff>=0.15.18",
]
